# vectorize-action

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  REDAME.md  action.yml  docker-compose.yml
.github/workflows/: test.yml
src/: action.rs  entries.rs  main.rs  metadata.rs  process_file.rs  sql.rs
src/models/: file_embed.rs  mod.rs
