[package]
name = "vectorize-project"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 0
incremental = false
panic = "abort"
opt-level = 3       # 0-3
strip = 'symbols'   # strip symbols from binary
lto = true          # enable link time optimization

[dependencies]
actions-toolkit = "0.0.2"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
