[package]
name = "vectorize-project"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 0
incremental = false
panic = "abort"
opt-level = 3       # 0-3
strip = 'symbols'   # strip symbols from binary
lto = true          # enable link time optimization

[dependencies]
actions-toolkit = "0.0.2"
anyhow = "1.0.98"
fastembed = "4.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time"] }
walkdir = "2.5.0"
sqlx = { version = "0.8.5", features = ["chrono", "derive", "json", "runtime-tokio", "sqlite", "uuid"] }
sea-query = { version = "0.32.4", features = ["backend-sqlite", "derive", "serde_json", "thread-safe", "with-chrono", "with-json", "with-uuid"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }